<resources>
    <string name="app_name">课程表</string>
    <string name="go">开始使用</string>
    <string name="skip">跳过</string>
    <string name="course_settings">课程设置</string>
    <string name="add_course">添加课程</string>
    <string name="edit_course">修改课程</string>
    <string name="default_course_name">默认课程名称</string>
    <string name="course_name">课程名称</string>
    <string name="from_and_end_text">上课周数：</string>
    <string name="default_from_and_end_time">默认上课周数</string>
    <string name="course_time">上课时间：</string>
    <string name="default_course_time">默认上课时间</string>
    <string name="course_location">上课地点：</string>
    <string name="default_course_location">默认上课地点</string>
    <string name="more">更多操作</string>
    <string name="no_courses">还没有课程哦</string>
    <string name="to">至</string>
    <string name="select_time">选择时间段</string>
    <string name="save">保存</string>
    <string name="course_location1">上课地点</string>
    <string name="modify">修改</string>
    <string name="delete">删除</string>
    <string name="batch_add">批量新增课程</string>
    <string name="batch_delete">批量删除课程</string>
    <string name="custom_school_schedule">自定义学期信息</string>
    <string name="set_start_times">设置每节课的上课时间</string>
    <string name="max_weeks">总周数：</string>
    <string name="set_max_weeks_hint">每个学期的周数</string>
    <string name="max_lessons_per_day">课程数：</string>
    <string name="set_max_lessons_per_day_hint">每天的课程数</string>
    <string name="duration_per_lesson">课程时长：</string>
    <string name="set_duration_per_lesson_hint">每节课的时长</string>
    <string name="default_start_time_title">第n节</string>
    <string name="start_time">开始时间：</string>
    <string name="colon">：</string>
    <string name="add">添加</string>
    <string name="sort_lessons">重新排序</string>
    <string name="batch_add_course">批量添加课程</string>
    <string name="how_to_batch_add_course">如何批量添加</string>
    <string name="put_json_data_hero">在此输入JSON数据</string>
    <string name="i_got_it">我知道了</string>
    <string name="prompt">
        根据图中课程信息，提取为json数组。注意上课地点是否带有空格。如果有的课程一周上多次，按多个课程算。如果只有一门课程，也要用中括号包裹json字符串。格式如下：\nname（课程名称,字符串）\nstartWeek（开始周数，整数）\nendWeek（结束周数，整数）\ndayOfWeek（周几上课，整数）\nstartLesson（当天第几节课开始上，整数）\nendLesson（上到当天第几节，整数）\nlocation（上课地点，字符串）
    </string>
    <string name="introduction_to_how_to_batch_add_course">
        在你的学校教务系统课程表界面中截图（或截长图），然后把以下提示词和图片一起发给AI，即可获取对应的JSON数组。
    </string>
    <string name="click_to_copy">一键复制</string>
    <string name="confirm_delete">确认删除</string>
    <string name="select_all">全选</string>
    <string name="course_setting">课程设置</string>
    <string name="about">关于</string>
    <string name="term_commencement_time">学期开始时间：</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="one">1</string>
    <string name="default_lesson_card_text">默认课程卡片文本</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="default_lesson_name">默认课程名称</string>
    <string name="default_lesson_time">默认课程时间</string>
    <string name="time">时间：</string>
    <string name="location">地点：</string>
    <string name="default_lesson_location">默认课程地点</string>
    <string name="confirm">确认</string>
    <string name="quick_set">快速修改</string>
    <string name="quick_set_start_times_hint">在下面的编辑框编辑每节课的开始时间，以回车分隔。</string>
    <string name="quick_set_start_times">快速编辑上课时间</string>
    <string name="current_lessons">当前节数：</string>
    <string name="remind_me">提醒我</string>
    <string name="app_settings">应用设置</string>
    <string name="minute">分钟</string>
    <string name="reminder_time">上课前多久提醒我：</string>
    <string name="remind_way">提醒方式：</string>
    <string name="zero">0</string>
    <string name="January">1月</string>
    <string name="version_name">版本：</string>
    <string name="default_version_name">默认版本号</string>
    <string name="website">仓库链接：</string>
    <string name="default_website">点击前往</string>
    <string name="last_build_time">最后构建时间：</string>
    <string name="default_last_build_time">默认最后构建时间</string>
    <string name="next_lesson">下一节课：</string>
    <string name="next_lesson_name">默认下节课名称</string>
    <string name="no_lesson">暂无</string>
    <string name="reset_app">重置设置（将保留添加的课程）：</string>
    <string name="confirm_reset">重置</string>
    <string name="alarm_way">闹钟设置方式：</string>
    <string name="export_as_json">导出为JSON</string>
    <string name="class_adjustment">调课设置</string>
    <string name="new_adjustment">新建调课</string>
    <string name="auto_adjust">自动调课</string>
    <string name="enable_auto_adjust">是否自动调课</string>
    <string name="run_auto_adjust_now">立刻进行自动调课</string>
    <string name="adjustment_description">调课说明</string>
    <string name="go_to_current_week">回到本周</string>
</resources>