<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:padding="20dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_add_course_dialog_title"
            android:text="@string/custom_school_schedule"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginBottom="12dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/max_weeks"
                  android:textSize="16sp"
                  android:layout_marginEnd="12sp"/>
        <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/et_set_max_weeks"
                  android:hint="@string/set_max_weeks_hint"
                  android:inputType="number"
                  android:digits="0123456789"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginBottom="12dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/max_lessons_per_day"
                  android:textSize="16sp"
                  android:layout_marginEnd="12sp"/>
        <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/et_set_max_lessons_per_day"
                  android:hint="@string/set_max_lessons_per_day_hint"
                  android:inputType="number"
                  android:digits="0123456789"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginBottom="12dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/duration_per_lesson"
                  android:textSize="16sp"
                  android:layout_marginEnd="12sp"/>
        <EditText android:layout_width="0dp" android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/et_set_duration_per_lesson"
                  android:hint="@string/set_duration_per_lesson_hint"
                  android:inputType="number"
                  android:digits="0123456789"/>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/save"
            app:backgroundTint="@color/main_theme"
            app:cornerRadius="20dp"/>
</LinearLayout>