<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="20dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lesson_name"
            android:text="@string/default_lesson_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginBottom="12dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/time"
                  android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/tv_lesson_time"
                  android:text="@string/default_lesson_time"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginBottom="12dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/location"
                  android:layout_marginEnd="20dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/tv_lesson_location"
                  android:text="@string/default_lesson_location"/>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="30dp"
              android:text=""/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_remind_me"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/remind_me"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginBottom="5dp"
            android:paddingHorizontal="10dp"
            android:minHeight="30dp"
            android:insetTop="5dp"
            android:insetBottom="0dp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/main_theme"
            app:strokeWidth="1.5dp"
            app:backgroundTint="@color/white"
            app:iconTint="@color/main_theme"
            app:rippleColor="#20000000"/>
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_close"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/confirm"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:paddingHorizontal="10dp"
            android:minHeight="30dp"
            android:insetTop="5dp"
            android:insetBottom="0dp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/main_theme"
            app:strokeWidth="1.5dp"
            app:backgroundTint="@color/white"
            app:iconTint="@color/main_theme"
            app:rippleColor="#20000000"/>
</LinearLayout>