<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="horizontal"
              android:paddingStart="20dp"
              android:paddingEnd="20dp"
              android:layout_marginBottom="16dp"
              android:gravity="center">
    <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                 android:id="@+id/btn_delete"
                 android:src="@drawable/ic_delete"
                 android:visibility="gone"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 app:tint="@color/light_gray"
                 android:layout_marginEnd="10dp"
                 tools:visibility="visible"/>
    <androidx.constraintlayout.widget.ConstraintLayout
                                                       android:layout_width="match_parent"
                                                       android:layout_height="wrap_content"
                                                       android:id="@+id/cl_card"
                                                       android:layout_margin="0dp"
                                                       android:background="@drawable/bg_course_card"
                                                       android:padding="16dp">
        <TextView
                android:id="@+id/tv_course_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/default_course_name"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btn_more"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:id="@+id/label_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/from_and_end_text"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_course_name"/>
        <TextView
                android:id="@+id/tv_course_weeks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/default_from_and_end_time"
                android:textColor="@color/gray"
                app:layout_constraintBaseline_toBaselineOf="@id/label_weeks"
                app:layout_constraintStart_toEndOf="@id/label_weeks"/>
        <TextView
                android:id="@+id/label_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/course_time"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_weeks"/>
        <TextView
                android:id="@+id/tv_course_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/default_course_time"
                android:textColor="@color/gray"
                app:layout_constraintBaseline_toBaselineOf="@id/label_time"
                app:layout_constraintStart_toEndOf="@id/label_time"/>
        <TextView
                android:id="@+id/label_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/course_location"
                android:textColor="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/label_time"/>
        <TextView
                android:id="@+id/tv_course_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/default_course_location"
                android:textColor="@color/gray"
                app:layout_constraintBaseline_toBaselineOf="@id/label_location"
                app:layout_constraintStart_toEndOf="@id/label_location"/>
        <ImageButton
                android:id="@+id/btn_more"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:scaleType="centerInside"
                android:src="@drawable/ic_more_horiz"
                app:tint="@color/gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/more"/>
    
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>