<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="20dp"
              android:layout_marginBottom="16dp">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_add_course_dialog_title"
            android:text="@string/batch_add_course"
            android:textSize="18sp"
            android:textStyle="bold"/>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:gravity="center">
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_how_to_batch_add_course"
                android:padding="4dp"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_to_batch_add_course"
                android:textColor="@color/main_theme" />
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_batch_input"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/put_json_data_hero"
                app:boxStrokeColor="@color/main_theme"
                app:hintTextColor="@color/light_gray">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_batch_input"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                app:backgroundTint="@color/main_theme"
                app:cornerRadius="20dp"/>
    </LinearLayout>
</LinearLayout>