<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_margin="8dp"
              android:background="@drawable/bg_course_card">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/tv_start_time_card_title"
                  android:text="@string/default_start_time_title"
                  android:textSize="16sp"/>
        <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:src="@drawable/ic_delete"
                     app:tint="@color/light_gray"
                     android:id="@+id/btn_delete"/>
    </RelativeLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginTop="12dp">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/start_time"
                  android:textSize="14sp"/>
        <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
                 android:id="@+id/spinner_start_time_hour"
                 android:layout_weight="1"
                 android:paddingStart="1dp"
                 android:paddingEnd="1dp"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/colon"
                  android:textSize="14sp"/>
        <Spinner android:layout_width="0dp" android:layout_height="wrap_content"
                 android:id="@+id/spinner_start_time_minute"
                 android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>
