<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">
    
    <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_start_times"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <!--    自定义rippleColor把点击动画的波纹效果改为灰色-->
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sort"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_lessons"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:paddingHorizontal="10dp"
            android:minHeight="30dp"
            android:insetTop="5dp"
            android:insetBottom="0dp"
            app:cornerRadius="20dp"
            app:strokeColor="@color/main_theme"
            app:strokeWidth="1.5dp"
            app:backgroundTint="@color/white"
            app:iconTint="@color/main_theme"
            app:rippleColor="#20000000"
            app:layout_constraintTop_toTopOf="@id/tv_dialog_title"
            app:layout_constraintBottom_toBottomOf="@id/tv_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"/>
    
    <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
            app:layout_constraintBottom_toTopOf="@+id/ll_add"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        
        <LinearLayout
                android:id="@+id/ll_set_start_times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    
    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/ll_add"
                  android:orientation="horizontal"
                  android:gravity="center"
                  app:layout_constraintBottom_toTopOf="@+id/btn_save"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintEnd_toEndOf="parent">
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/main_theme"
                app:layout_constraintBottom_toTopOf="@id/btn_save"/>
        
        <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_quick_set_start_times"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quick_set"
                app:cornerRadius="20dp"
                app:backgroundTint="@color/main_theme"/>
    </LinearLayout>
    
    
    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:cornerRadius="20dp"
            app:backgroundTint="@color/main_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>